--- a/movie.html
+++ b/movie.html
@@ -13,25 +13,11 @@
         <h1>Your Movie Website</h1>
     </header>
 
-    <!-- Main Content Sections -->
+    <!-- Main Content Section -->
     <section class="movie-section" id="section1">
-        <h2>Section 1</h2>
-        <div class="movie-poster" onclick="showMovieDetails('movie1')">
-            <img src="movie1_poster.jpg" alt="Movie 1 Poster">
-        </div>
-    </section>
-
-    <section class="movie-section" id="section2">
-        <h2>Section 2</h2>
-        <div class="movie-poster" onclick="showMovieDetails('movie2')">
-            <img src="movie2_poster.jpg" alt="Movie 2 Poster">
-        </div>
-    </section>
-
-    <section class="movie-section" id="section3">
-        <h2>Section 3</h2>
-        <div class="movie-poster" onclick="showMovieDetails('movie3')">
-            <img src="movie3_poster.jpg" alt="Movie 3 Poster">
+        <h2>Movie Details</h2>
+        <div class="movie-poster" onclick="showMovieDetails()">
+            <img src="single_movie_poster.jpg" alt="Movie Poster">
         </div>
     </section>
 
